--- a/webroot/adm/keysets.html
+++ b/webroot/adm/keysets.html
@@ -16,7 +16,7 @@
 <label for="siteId">Site Id:</label>
 <input type="text" id="siteId" name="siteId">
 <label for="keysetId">Keyset Id:</label>
-<input type="text" id="keysetId" name="siteId">
+<input type="text" id="keysetId" name="keysetId">
 <label for="addSiteIds">Add Site Ids:</label>
 <input type="text" id="addSiteIds" name="addSiteIds">
 <label for="removeSiteIds">Remove Site Ids:</label>
