--- a/webroot/adm/site.html
+++ b/webroot/adm/site.html
@@ -17,6 +17,8 @@
 <input type="text" id="siteName" name="siteName">
 <label for="siteId">Site Id:</label>
 <input type="text" id="siteId" name="siteId">
+<label for="types">Types:</label>
+<input type="text" id="types" name="types">
 
 <br>
 <br>
@@ -28,6 +30,7 @@
     <li class="ro-cki" style="display: none"><a href="#" id="doAdd">Add Site</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doEnable">Enable Site</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doDisable">Disable Site</a></li>
+    <li class="ro-cki" style="display: none"><a href="#" id="doSetTypes">Set Types</a></li>
 </ul>
 
 <br>
@@ -47,7 +50,8 @@
 
         $('#doAdd').on('click', function () {
             var siteName = encodeURIComponent($('#siteName').val());
-            var url = '/api/site/add?name=' + siteName;
+            var types = encodeURIComponent($('#types').val());
+            var url = '/api/site/add?name=' + siteName + '&types=' + types;
 
             doApiCall('POST', url, '#standardOutput', '#errorOutput');
         });
@@ -64,6 +68,13 @@
             var url = '/api/site/enable?enabled=true&id=' + siteId;
 
             doApiCall('POST', url, '#standardOutput', '#errorOutput');
+        });
+        $('#doSetTypes').on('click', function () {
+            var siteId = encodeURIComponent($('#siteId').val());
+            var types = encodeURIComponent($('#types').val());
+            var url = '/api/site/set-types?id=' + siteId + '&types=' + types;
+
+            doApiCall('POST', url, '#standardOutput', '#errorOutpout');
         });
     });
 </script>
