--- a/webroot/adm/keysets.html
+++ b/webroot/adm/keysets.html
@@ -101,19 +101,22 @@
         const jo = JSON.parse(text);
         let allowlist = jo.allowlist;
 
-        allowlist = allowlist.filter((value, _, __) => !remove.includes(value))
-        allowlist = allowlist.concat(add.filter((value, _, __) => !allowlist.includes(value)))
-
         const url = '/api/sharing/keyset';
 
-        let payload;
-        if(name && (name = $.trim(name))) {
-          payload = JSON.stringify({allowlist: allowlist, keyset_id: keysetId, site_id: siteId, name: name})
-        } else {
-          payload = JSON.stringify({allowlist: allowlist, keyset_id: keysetId, site_id: siteId})
+        let payload = {keyset_id: keysetId, site_id: siteId}
+
+        if((add && add.length !== 0) || (remove && remove.length !== 0)) {
+          allowlist = allowlist.filter((value, _, __) => !remove.includes(value))
+          allowlist = allowlist.concat(add.filter((value, _, __) => !allowlist.includes(value)))
         }
 
-        doApiCall('POST', url, '#standardOutput', 'errorOutput', payload)
+        payload["allowlist"] = allowlist
+
+        if(name && (name = $.trim(name))) {
+          payload["name"] = name
+        }
+
+        doApiCall('POST', url, '#standardOutput', 'errorOutput', JSON.stringify(payload))
       }, (err) => {
         $('#errorOutput').html('Error: ' + err.status + ': ' + err.statusText);
       });
