--- a/webroot/adm/keysets.html
+++ b/webroot/adm/keysets.html
@@ -17,9 +17,9 @@
 <input type="text" id="siteId" name="siteId">
 <label for="keysetId">Keyset Id:</label>
 <input type="text" id="keysetId" name="keysetId">
-<label for="addSiteIds">Add Site Ids:</label>
+<label for="addSiteIds">Add Allowed Site Ids:</label>
 <input type="text" id="addSiteIds" name="addSiteIds">
-<label for="removeSiteIds">Remove Site Ids:</label>
+<label for="removeSiteIds">Remove Allowed Site Ids:</label>
 <input type="text" id="removeSiteIds" name="removeSiteIds">
 
 <br>
