--- a/webroot/adm/keysets.html
+++ b/webroot/adm/keysets.html
@@ -85,21 +85,19 @@
     });
 
     $('#doReset').on('click', function () {
-      const siteId = parseInt($('#siteId').val());
       const keysetId = parseInt($('#keysetId').val());
-      if(!keysetId || !siteId) {
-        $('#errorOutput').html("Required Parameters: keyset_id, site_id")
+      if(!keysetId) {
+        $('#errorOutput').html("Required Parameters: keyset_id")
         return;
       }
       const url = '/api/sharing/keyset';
-      doApiCall('POST', url, '#standardOutput', 'errorOutput', JSON.stringify({allowlist: [], keyset_id : keysetId, site_id: siteId}))
+      doApiCall('POST', url, '#standardOutput', 'errorOutput', JSON.stringify({allowlist: [], keyset_id : keysetId}))
     });
 
     $('#doUpdate').on('click', function () {
-      const siteId = parseInt($('#siteId').val());
       const keysetId = parseInt($('#keysetId').val());
-      if(!keysetId || !siteId) {
-        $('#errorOutput').html("Required Parameters: keyset_id, site_id")
+      if(!keysetId) {
+        $('#errorOutput').html("Required Parameters: keyset_id")
         return;
       }
       let name = $('#keysetName').val();
@@ -114,7 +112,7 @@
 
         const url = '/api/sharing/keyset';
 
-        let payload = {keyset_id: keysetId, site_id: siteId}
+        let payload = {keyset_id: keysetId}
 
         if((add && add.length !== 0) || (remove && remove.length !== 0)) {
           allowlist = allowlist.filter((value, _, __) => !remove.includes(value))
