--- a/webroot/adm/keysets.html
+++ b/webroot/adm/keysets.html
@@ -17,9 +17,9 @@
 <input type="text" id="siteId" name="siteId">
 <label for="keysetId">Keyset Id:</label>
 <input type="text" id="keysetId" name="keysetId">
-<label for="addSiteIds">Add Site Ids:</label>
+<label for="addSiteIds">Add Allowed Site Ids:</label>
 <input type="text" id="addSiteIds" name="addSiteIds">
-<label for="removeSiteIds">Remove Site Ids:</label>
+<label for="removeSiteIds">Remove Allowed Site Ids:</label>
 <input type="text" id="removeSiteIds" name="removeSiteIds">
 
 <br>
@@ -63,7 +63,7 @@
         return
       }
       const url = '/api/sharing/keyset';
-      doApiCall('POST', url, '#standardOutput', 'errorOutput', JSON.stringify({allowlist: [], keyset_id : keysetId, site_id: siteId}))
+      doApiCall('POST', url, '#standardOutput', 'errorOutput', JSON.stringify({allowed_sites: [], keyset_id : keysetId, site_id: siteId}))
     });
 
     $('#doUpdate').on('click', function () {
@@ -76,15 +76,15 @@
 
       doApiCallWithCallback('GET', url, (text) => {
         const jo = JSON.parse(text);
-        let allowlist = jo.allowlist;
+        let allowedSites = jo.allowed_sites;
 
-        allowlist = allowlist.filter((value, _, __) => !remove.includes(value))
-        allowlist = allowlist.concat(add.filter((value, _, __) => !allowlist.includes(value)))
+        allowedSites = allowedSites.filter((value, _, __) => !remove.includes(value))
+        allowedSites = allowedSites.concat(add.filter((value, _, __) => !allowedSites.includes(value)))
 
         const url = '/api/sharing/keyset';
 
 
-        doApiCall('POST', url, '#standardOutput', 'errorOutput', JSON.stringify({allowlist: allowlist, keyset_id: keysetId, site_id: siteId}))
+        doApiCall('POST', url, '#standardOutput', 'errorOutput', JSON.stringify({allowed_sites: allowedSites, keyset_id: keysetId, site_id: siteId}))
       }, (err) => {
         $('#errorOutput').html('Error: ' + err.status + ': ' + err.statusText);
       });
@@ -93,7 +93,7 @@
     $('#doMakeNew').on('click', function () {
       const siteId = parseInt($('#siteId').val());
       const url = '/api/sharing/keyset';
-      doApiCall('POST', url, '#standardOutput', 'errorOutput', JSON.stringify({allowlist: [] ,site_id: siteId}));
+      doApiCall('POST', url, '#standardOutput', 'errorOutput', JSON.stringify({allowed_sites: [] ,site_id: siteId}));
     });
   });
 
