--- a/webroot/adm/keysets.html
+++ b/webroot/adm/keysets.html
@@ -26,6 +26,8 @@
   <input type="text" id="addSiteIds" name="addSiteIds">
   <label for="removeSiteIds">Remove Allowed Sites:</label>
   <input type="text" id="removeSiteIds" name="removeSiteIds">
+  <label for="nullify">Set allowed_sites to *:</label>
+  <input type="checkbox" id="nullify" name="nullify" value="true">
 </div>
 
 <br>
@@ -118,7 +120,9 @@
 
         let payload = {keyset_id: keysetId}
 
-        if((add && add.length !== 0) || (remove && remove.length !== 0)) {
+        if ($('#nullify').is(':checked')){
+          allowlist = null
+        } else if((add && add.length !== 0) || (remove && remove.length !== 0)) {
           allowlist = allowlist.filter((value, _, __) => !remove.includes(value))
           allowlist = allowlist.concat(add.filter((value, _, __) => !allowlist.includes(value)))
         }
@@ -144,14 +148,17 @@
       let name = $('#keysetName').val();
       const url = '/api/sharing/keyset';
 
-      let payload;
+      let payload = {site_id: siteId}
       if(name && (name = $.trim(name))) {
-        payload = JSON.stringify({allowlist: [], site_id: siteId, name: name})
-      } else {
-        payload = JSON.stringify({allowlist: [], site_id: siteId})
+        payload['name'] = name
       }
 
-      doApiCall('POST', url, '#standardOutput', '#errorOutput', payload);
+      const add = ($('#addSiteIds').val()).replace(/\s+/g, '').split(',').filter( (value, _, __) => value !== "").map(Number);
+      if(add && add.length !== 0) {
+        payload['allowlist'] = [].concat(add.filter((value, _, __) => !allowlist.includes(value)))
+      }
+
+      doApiCall('POST', url, '#standardOutput', '#errorOutput', JSON.stringify(payload));
     });
   });
 
