--- a/webroot/adm/keysets.html
+++ b/webroot/adm/keysets.html
@@ -95,7 +95,7 @@
         return;
       }
       const url = '/api/sharing/keyset';
-      doApiCall('POST', url, '#standardOutput', '#errorOutput', JSON.stringify({allowlist: [], keyset_id : keysetId}))
+      doApiCall('POST', url, '#standardOutput', '#errorOutput', JSON.stringify({allowed_sites: [], keyset_id : keysetId}))
     });
 
     $('#doUpdate').on('click', function () {
@@ -112,18 +112,18 @@
 
       doApiCallWithCallback('GET', url, (text) => {
         const jo = JSON.parse(text);
-        let allowlist = jo.allowlist;
+        let allowedSites = jo.allowed_sites;
 
         const url = '/api/sharing/keyset';
 
         let payload = {keyset_id: keysetId}
 
         if((add && add.length !== 0) || (remove && remove.length !== 0)) {
-          allowlist = allowlist.filter((value, _, __) => !remove.includes(value))
-          allowlist = allowlist.concat(add.filter((value, _, __) => !allowlist.includes(value)))
+          allowedSites = allowedSites.filter((value, _, __) => !remove.includes(value))
+          allowedSites = allowedSites.concat(add.filter((value, _, __) => !allowedSites.includes(value)))
         }
 
-        payload["allowlist"] = allowlist
+        payload["allowed_sites"] = allowedSites
 
         if(name && (name = $.trim(name))) {
           payload["name"] = name
@@ -146,9 +146,9 @@
 
       let payload;
       if(name && (name = $.trim(name))) {
-        payload = JSON.stringify({allowlist: [], site_id: siteId, name: name})
+        payload = JSON.stringify({allowed_sites: [], site_id: siteId, name: name})
       } else {
-        payload = JSON.stringify({allowlist: [], site_id: siteId})
+        payload = JSON.stringify({allowed_sites: [], site_id: siteId})
       }
 
       doApiCall('POST', url, '#standardOutput', '#errorOutput', payload);
